# feriphys

./: Cargo.toml  README.md  TODO.md
res/: Coral0.mtl  blue_fish.mtl  fish.mtl  pirate_ship.mtl  seafloor.mtl  yellow_fish.mtl
src/: args.rs  bouncing_ball_demo.rs  camera.rs  color_shader.wgsl  entity.rs  forms.rs  gpu_interface.rs  instance.rs  lib.rs  light.rs  light.wgsl  main.rs  model.rs  particles_demo.rs  rendering.rs  resources.rs  scene.rs  shader.wgsl  texture.rs  utilities.rs  utils.rs
src/demos/: bouncing_ball.rs  cloth.rs  flocking.rs  mod.rs  particles_cpu.rs  rigidbody.rs  sph.rs  spring_mass_damper.rs  utils.rs
src/graphics/: camera.rs  entity.rs  forms.rs  instance.rs  light.rs  mod.rs  model.rs  resources.rs  scene.rs  util.rs
src/gui/: bounce_gui.rs  flocking.rs  mod.rs  particles.rs  particles_gui.rs  rigidbody.rs  sph.rs  spring_mass_damper.rs
src/rendering/: util.rs
src/shaders/: color_shader.wgsl
src/simulation/: bounce.rs  bounding_box.rs  consts.rs  flocking.rs  generator.rs  mod.rs  obstacle.rs  parametric.rs  particle.rs  particles.rs  point_attractor.rs  position.rs  state.rs  velocity.rs
src/simulation/flocking/: boid.rs  flocking.rs  mod.rs  obstacle.rs
src/simulation/particles_cpu/: generator.rs  mod.rs  obstacle.rs  particles.rs
src/simulation/rigidbody/: config.rs  mod.rs  rigidbody.rs  simulation.rs
src/simulation/sph/: config.rs  kernals.rs  mod.rs
src/simulation/springy/: cloth.rs  collidable_mesh.rs  config.rs  mod.rs  obstacle.rs  simulation.rs  springy_mesh.rs
