[package]
name = "feriphys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26"
env_logger = "0.9"
log = "0.4"
wgpu = "0.13"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
# image's rayon decoding uses threads, and WASM doesn't support threads, so using
# full image features would crash if we load a jpeg on the web.
# This project isn't being built for web though, so we're OK to use the full
# image library. However, if this project is ever built for web,
# it should limit the features to features = ["png", "jpeg"]
image = "0.24"
anyhow = "1.0"
cgmath = "0.18"
tobj = "3.2.1"
itertools = "0.10.3"
egui_winit_platform = "0.15"
egui = "0.18"
epi = "0.17"
egui_wgpu_backend = "0.18"
clap = { version = "4.0.0", features = [ "derive" ] }
rand = "0.8.4"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"